--- a/src/styles/components/layout/header/fragments/brand/Brand.module.css
+++ b/src/styles/components/layout/header/fragments/brand/Brand.module.css
@@ -1,10 +1,12 @@
-.Header {
+.Brand {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
-    height: 64px;
-    min-height: 64px;
-    width: 100%;
-    gap: 32px;
+    gap: 8px;
+}
+
+.Brand p {
+    font-size: 18px;
+    font-weight: 700;
 }
