--- a/src/styles/components/layout/header/fragments/navigation/Navigation.module.css
+++ b/src/styles/components/layout/header/fragments/navigation/Navigation.module.css
@@ -1,10 +1,8 @@
-.Header {
+.Navigation {
+    flex-grow: 1;
+    height: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
-    height: 64px;
-    min-height: 64px;
-    width: 100%;
-    gap: 32px;
 }
