--- a/src/styles/components/layout/header/Header.module.css
+++ b/src/styles/components/layout/header/Header.module.css
@@ -5,6 +5,41 @@
     justify-content: flex-start;
     height: 64px;
     min-height: 64px;
-    width: 100%;
     gap: 32px;
+    border-bottom: 1px solid var(--black-5);
+}
+
+@media (min-width: 0px) and (max-width: 384px) {
+    .Header {
+        padding-left: 16px;
+        padding-right: 16px;
+        width: calc(100% - 32px);
+    }
+}
+
+@media (min-width: 384px) and (max-width: 768px) {
+    .Header {
+        padding-left: 32px;
+        padding-right: 32px;
+        width: calc(100% - 64px);
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1536px) {
+    .Header {
+        padding-left: 64px;
+        padding-right: 64px;
+        width: calc(100% - 128px);
+    }
+}
+
+@media (min-width: 1536px) {
+    .Header {
+        padding-left: calc(64px + calc(100% - 1536px) / 2);
+        padding-right: calc(64px + calc(100% - 1536px) / 2);
+        width: calc(
+            100% - calc(64px + calc(100% - 1536px) / 2) -
+                calc(64px + calc(100% - 1536px) / 2)
+        );
+    }
 }
