--- a/src/styles/components/layout/header/fragments/navigation/Navigation.module.css
+++ b/src/styles/components/layout/header/fragments/navigation/Navigation.module.css
@@ -4,5 +4,6 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: flex-end;
+    gap: 16px;
 }
