--- a/src/styles/components/layout/header/fragments/navigation/fragments/navigation_item/NavigationItem.module.css
+++ b/src/styles/components/layout/header/fragments/navigation/fragments/navigation_item/NavigationItem.module.css
@@ -1,4 +1,5 @@
-.NavigationItem {
+.NavigationItem,
+.NavigationItemActive {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -7,13 +8,19 @@
     height: fit-content;
 }
 
-.NavigationItem a {
+.NavigationItem a,
+.NavigationItemActive a {
     text-decoration: none;
     color: black;
     padding: 8px;
     border-radius: 12px;
 }
 
-.NavigationItem a:hover {
+.NavigationItem a:hover,
+.NavigationItemActive a:hover {
     background-color: var(--black-5);
+}
+
+.NavigationItemActive {
+    font-weight: 600;
 }
