feat(layout): add Footer content and adjust both Footer and Main styles

--- a/src/styles/components/layout/header/fragments/navigation/fragments/navigation_item/NavigationItem.module.css
+++ b/src/styles/components/layout/header/fragments/navigation/fragments/navigation_item/NavigationItem.module.css
@@ -24,3 +24,10 @@
 .NavigationItemActive {
     font-weight: 600;
 }
+
+@media (max-width: 769px) {
+    .NavigationItem a,
+    .NavigationItemActive a {
+        cursor: default;
+    }
+}
