--- a/src/styles/components/views/landing/hero/Hero.module.css
+++ b/src/styles/components/views/landing/hero/Hero.module.css
@@ -1,11 +1,10 @@
 .Hero {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-start;
-    gap: 64px;
-    height: fit-content;
+    display: grid;
+    flex-direction: column;
+    grid-template-columns: 5fr 3fr;
+    grid-template-rows: 1fr;
     width: 100%;
+    gap: 64px;
 }
 
 .HeroImage {
@@ -13,11 +12,11 @@
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
-    flex-grow: 1;
+    width: 100%;
 }
 
 .HeroImage img {
-    max-width: 100%;
+    width: 100%;
     border-radius: 32px;
     height: auto;
 }
@@ -27,11 +26,7 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-    width: fit-content;
-    height: fit-content;
     gap: 24px;
-    max-width: 500px;
-    /* min-width: 400px; */
 }
 
 .HeroText h1 {
@@ -46,10 +41,18 @@
 
 @media (min-width: 0px) and (max-width: 768px) {
     .Hero {
+        display: flex;
         flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
         gap: 32px;
     }
     .HeroText {
-        min-width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        height: fit-content;
     }
 }
