--- a/src/styles/components/layout/header/Header.module.css
+++ b/src/styles/components/layout/header/Header.module.css
@@ -10,6 +10,7 @@
     position: sticky;
     top: 0px;
     background-color: var(--carrara-white);
+    z-index: 999;
 }
 
 @media (min-width: 0px) and (max-width: 384px) {
