--- a/src/styles/components/views/landing/hero/Hero.module.css
+++ b/src/styles/components/views/landing/hero/Hero.module.css
@@ -4,21 +4,26 @@
     grid-template-columns: 5fr 3fr;
     grid-template-rows: 1fr;
     width: 100%;
-    gap: 64px;
+    gap: 128px;
+    align-items: center;
 }
 
 .HeroImage {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     width: 100%;
+    background-color: var(--black-5);
+    border-radius: 32px;
+    height: fit-content;
 }
 
 .HeroImage img {
     width: 100%;
     border-radius: 32px;
     height: auto;
+    rotate: 5deg;
 }
 
 .HeroText {
@@ -39,7 +44,7 @@
     font-style: italic;
 }
 
-@media (min-width: 0px) and (max-width: 768px) {
+@media (min-width: 0px) and (max-width: 1152px) {
     .Hero {
         display: flex;
         flex-direction: column;
